[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://components/ui/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sprites/ui/logo.png" type="Texture" id=5]
[ext_resource path="res://components/ui/ConfirmModal.tscn" type="PackedScene" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 430.0
margin_top = 190.0
margin_right = 850.0
margin_bottom = 530.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 420.0
margin_bottom = 260.0
rect_min_size = Vector2( 420, 0 )
custom_constants/separation = 20

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 200 )
mouse_default_cursor_shape = 2
text = "START_GAME"

[node name="OptionsMenu" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 220.0
margin_right = 420.0
margin_bottom = 260.0
rect_min_size = Vector2( 200, 120 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 420.0
margin_bottom = 340.0
rect_min_size = Vector2( 420, 0 )
custom_constants/separation = 20

[node name="TutorialButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
mouse_default_cursor_shape = 2
text = "TUTORIAL"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 220.0
margin_right = 420.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 0 )
mouse_default_cursor_shape = 2
text = "QUIT"

[node name="CreditsLabel" type="Label" parent="."]
margin_left = 1.0
margin_top = 686.0
margin_right = 1280.0
margin_bottom = 718.0
text = "MAIN_MENU_CREDITS"
align = 1

[node name="VersionLabel" type="Label" parent="."]
margin_left = 1190.0
margin_top = 686.0
margin_right = 1272.0
margin_bottom = 716.0
text = "V1.0"
align = 2

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 642, 70 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="QuitConfirmModal" parent="." instance=ExtResource( 6 )]
visible = false
text = "QUIT_CONFIRM"
yes_text = "QUIT_CONFIRM_YES"
